[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/machine/FlickArea.gd" type="Script" id=1]
[ext_resource path="res://src/shared/misc/MouseHover.gd" type="Script" id=2]

[node name="FlickArea" type="Area2D"]
collision_mask = 0
script = ExtResource( 1 )

[node name="MouseHover" type="Node" parent="."]
script = ExtResource( 2 )
node_path = NodePath("..")

[node name="Line" type="Line2D" parent="."]
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[connection signal="mouse_move" from="MouseHover" to="." method="_on_MouseHover_mouse_move"]
[connection signal="mouse_pressed" from="MouseHover" to="." method="_on_MouseHover_mouse_pressed"]
[connection signal="mouse_released" from="MouseHover" to="." method="_on_MouseHover_mouse_released"]
